--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <p id="time">hello</p>
+      <p id="time"></p>
     </div>
     <script src="index.js"></script>
   </body>
