--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Gabarito:wght@600&family=IBM+Plex+Mono:wght@500&family=Kanit&family=Ubuntu:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="/assets/clock.png">
+    <link rel="icon" type="image/x-icon" href="./assets/clock.png">
     <title>Digital Clock</title>
   </head>
   <body>
